fix : change scrollbar styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,17 +141,17 @@
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(45, 45, 45); /* Tailwind color or custom color */
+  background-color: rgb(236, 232, 232); /* Tailwind color or custom color */
   border-radius: 6px;
-  border: 2px solid rgb(45, 45, 45); /* Tailwind color or custom color */
+  border: 1px solid rgb(227, 219, 219); /* Tailwind color or custom color */
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #030303; /* Tailwind color or custom color */
+  background-color: #f7f5f5; /* Tailwind color or custom color */
   border-radius: 6px;
 }
 
